docs: (PERF.HW.f) the parallel path decomposed — wall(N) = 1,447 + 7,717/N warm
Round 879 left one number to explain: a worker appeared to run its own
assigned work ~50% slower than the same work runs sequentially. Three
candidates, taken cheapest first, and the two obvious ones are acquitted.

GC: pauses total 734 ms over 32 events at w1 (3.1% of the wall) and
1,338 ms over 36 at w4 (9.0%) — real, roughly doubled, nowhere near the
effect, and decisively heap-INSENSITIVE: -Xmx4g 14,896 ms against
-Xmx8g 14,865 ms, a 0.2% difference.

JIT / core saturation was the leading hypothesis, since CLAUDE.md records
that a "single-threaded" run already occupies ~4.17 of 8 cores from
CICompilerCountPerCPU, which would make this a cold artefact. It is not:
warm, after six rebuilds, w0 still costs 3,892 ms for ONE file (3,151 k
chars) against 3,157-3,310 ms for 25-26 files (2,275 k chars).

Fitting `worker = fixed + r x assigned chars` over the warm rows gives
r = 0.776 ms/k-char against a sequential 0.565 — +37% contention, not
50%; the rest of the apparent 50% was a fixed term being read as a rate.
fixed = 1,447 ms = the re-bind (515) plus ~930 ms of program-wide checker
work every worker does regardless of assignment.

The consequence matters more than the number: a per-worker FIXED cost
cannot be shared away. Hoisting F to the serial prefix leaves
wall = F + A/N, identical — so parallel-caching.md's Phase 1 (resolve the
lib slice once, freeze it, share it read-only) buys ZERO wall, however
redundant the N copies look. wall(N) = 1,447 + 7,717/N predicts 3,376 ms
at N=4 against 3,035-3,232 measured, and gives a 4.35x ceiling that
contention keeps out of reach.

So the concurrency arc is at its useful limit on this program at warm
w4 = 1.95x. What is left is not a scheduling change: either the
Checker-does-not-mutate-binder-output refactor that would let the bind be
shared, or making the ~930 ms of program-wide passes partition-scoped one
at a time. Both should be priced before